feat(gateway):增加陪玩注册接口，状态改变
